--- a/de/index.html
+++ b/de/index.html
@@ -36,8 +36,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand hidden-xs hidden-sm" href="#page-top">Münchener Laptops für Flüchtlinge</a>
-            <a class="navbar-brand hidden-md hidden-lg" href="#page-top">Muc Laptops 4 Flüchtlinge </a>
+            <a class="navbar-brand " href="javascrript:void(0)">Münchener Laptops für Flüchtlinge</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -67,7 +66,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <i class="fa fa-laptop banner-icon"></i>
+                <i class="fa fa-beer banner-icon"></i> &nbsp;&nbsp;&nbsp;&nbsp; <i class="fa fa-laptop banner-icon"></i>
 
                 <div class="intro-text">
                     <span class="name">Münchener Laptops für Flüchtlinge</span>
