--- a/de/index.html
+++ b/de/index.html
@@ -36,7 +36,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand " href="javascrript:void(0)">Münchener Laptops für Flüchtlinge</a>
+            <a class="navbar-brand " href="javascript:void(0)">Münchener Laptops für Flüchtlinge</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
