--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="refresh" content="1; url=http://www.laptops4refugees.de/de/index.html/"/>
+    <meta http-equiv="refresh" content="1; url=http://www.laptops4refugees.de/de/index.html"/>
     <script type="text/javascript">
-        window.location.href = "http://www.laptops4refugees.de/de/index.html/"
+        window.location.href = "http://www.laptops4refugees.de/de/index.html"
     </script>
 
     <title>Münchener Laptops für Flüchtlinge</title>
@@ -18,6 +18,6 @@
 
 <body>
 
-If you are not redirected automatically, follow the <a href='http://www.laptops4refugees.de/de/index.html/'>link to Münchener Laptops für Flüchtlinge</a>
+If you are not redirected automatically, follow the <a href='http://www.laptops4refugees.de/de/index.html'>link to Münchener Laptops für Flüchtlinge</a>
 </body>
 </html>
